Removing some Java 15 JVM args