@@ -9,13 +9,6 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '8'
 targetCompatibility = '8'
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += '--enable-preview'
-}
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
-
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
